mudanca nos icones

--- a/brasileirao.html
+++ b/brasileirao.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Campeonato Brasileiro 2025 | Notícias Esportivas Brasil</title>
     <link rel="stylesheet" href="static/css/styles.css">
-    <link rel="shortcut icon" type="image/png" href="static/icon/favicon.ico">
+    <link rel="shortcut icon" type="image/png" href="static\icon\brasileiro\favicon.ico">
 <script type='text/javascript' src='https://private-us-east-1.manuscdn.com/pb4QbyZ4UMKFx0hytymkzGAeAF4kzZvYH5NfSmPSw-PtZSp7q1jBNh0go76fao7Wb-pB5p9K2DXB0X3pQ1NI7hPTO6Kk_v3kke4xqjmycVmLlmXXecb3e6J0MbwsQTL9le-bThvRT8_qtIv-69nsi9Bd-2z-CZ4GPds_zn6_whI='></script></head>
 <body>
     <header>
