--- a/contato.html
+++ b/contato.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Área de Contato | Notícias Esportivas Brasil</title>
     <link rel="stylesheet" href="static/css/styles.css">
-    <link rel="shortcut icon" type="image/png" href="static/icon/favicon.ico">
+    <link rel="shortcut icon" type="image/png" href="static\icon\contato\favicon.ico">
 <script type='text/javascript' src='https://private-us-east-1.manuscdn.com/NxiGfczTVCQzLhj5nZHRT4WEyzcuM4fIuaJf2wZ2-mVxrzd71L0VWctKdEmEVgTNcDvbgxuIN106GTOVbiadtNh290dfzdbk9ENGw1d43AuW85aYpky8O4rkSsX2Tl6iVmwUmHJsaT1WjUY1Qb1WWg4nzm7Bm3rimwzPEvauRzY='></script></head>
 <body>
     <header>
         <div class="header-container">
-            <h1 class="logo">⚽ Notícias Esportivas Brasil</h1>
+            <h1 class="logo">📞 Notícias Esportivas Brasil</h1>
             <p class="tagline">Acompanhe as principais notícias do esporte brasileiro</p>
         </div>
     </header>
