--- a/formula1.html
+++ b/formula1.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fórmula 1 - GP São Paulo | Notícias Esportivas Brasil</title>
     <link rel="stylesheet" href="static/css/styles.css">
-    <link rel="shortcut icon" type="image/png" href="static/icon/favicon.ico">
+    <link rel="shortcut icon" type="image/png" href="static\icon\F1\favicon.ico">
     <script type='text/javascript' src='https://private-us-east-1.manuscdn.com/aG0-BmE3WQGihrnRVauMz4BshcKQWEJ8wRdix7iLkZQHE_6LN8RCEBrWNxie56Hurvq0DJfwkU2JReZfH5_2hmtcjigZgOn3YjWVrKLKIDB0F5Sp4TS_rc2OxVDt7XM8_gBBSOF0db2jmE4-M6KJG4czK8ZakLqXTn5ZMkd_-2Q='></script>
 </head>
 <body>
     <header>
         <div class="header-container">
-            <h1 class="logo">⚽ Notícias Esportivas Brasil</h1>
+            <h1 class="logo">🏎️ Notícias Esportivas Brasil</h1>
             <p class="tagline">Acompanhe as principais notícias do esporte brasileiro</p>
         </div>
     </header>
