--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notícias Esportivas Brasil - Home</title>
-    <link rel="shortcut icon" type="image/png" href="static/icon/favicon.ico">
+    <link rel="shortcut icon" type="image/png" href="static\icon\home\favicon.ico">
     <link rel="stylesheet" href="static/css/styles.css">
 <script type='text/javascript' src='https://private-us-east-1.manuscdn.com/aW0qyqahKiB-viCdVZiy7EZJsXSWKQWeLDi6c-CxDyXyuQDFM38Vi3sOjFvVIZYvhoZ-ff6yoKz0Ipllj4g-mEZzP_IOdObiy-UBCVPXzmgUFYZp_2JetdkU-u0nLYIE5dnt-5iB80GRRiPYuAfWCcPmPBB7WOFzlSm-DJd-tfg='></script></head>
 <body>
     <header>
         <div class="header-container">
-            <h1 class="logo">⚽ Notícias Esportivas Brasil</h1>
+            <h1 class="logo">🏠 Notícias Esportivas Brasil</h1>
             <p class="tagline">Acompanhe as principais notícias do esporte brasileiro</p>
         </div>
     </header>
