--- a/volei.html
+++ b/volei.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notícias de Vôlei | Notícias Esportivas Brasil</title>
     <link rel="stylesheet" href="static/css/styles.css">
-    <link rel="shortcut icon" type="image/png" href="static/icon/favicon.ico">
+    <link rel="shortcut icon" type="image/png" href="static/icon/Voley/favicon.ico">
 <script type='text/javascript' src='https://private-us-east-1.manuscdn.com/azfGgQ2zhf1nA7QSopq9jQyF7LcItqewRHL4akBmYlOJw64YD8O_sQnT_24NTg2j5Zi6ACIFtfH858ocLVgLgfCySKR8teIJAAaRHbhH0IgId3dePLxbWPIEf8cSyoORh6h7bXLDKUW4Em8QWpwmewoxSFqLAMyCYorvO253JiM='></script></head>
 <body>
     <header>
         <div class="header-container">
-            <h1 class="logo">⚽ Notícias Esportivas Brasil</h1>
+            <h1 class="logo">🏐 Notícias Esportivas Brasil</h1>
             <p class="tagline">Acompanhe as principais notícias do esporte brasileiro</p>
         </div>
     </header>
